2008-05-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c:
	Fix display problems with the notification by putting it inside an
	event box (#512231, thanks Pekka Vuorela)

2008-04-17  Luca Cavalli  <lcavalli@svn.gnome.org>

	* src/Makefile.am:
	* src/egg-play-preview.[ch]:
	Add an audio preview widget.
	* src/sj-extracting.c: (confirm_overwrite_existing_file):
	Allow the user to listen to the track before choose to skip or
	overwrite it (#161315).

2008-04-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Add AM_PROG_CC_C_O.

2008-04-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Bump GTK+ dependency to 2.12.

	* src/Makefile.am:
	* src/bacon-volume.[ch]:
	* po/POTFILES.in:
	Remove BaconVolume widget.

	* data/sound-juicer.glade:
	* src/sj-main.c:
	* src/sj-play.[ch]:
	Use GtkVolumeButton (#518753, thanks Michael Terry)

2008-04-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix crash when no profile is selected (#364666, thanks Matthew Martin).

2008-04-13  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Clean up _new().

2008-03-14  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Add []<> to the special list (#511664, thanks Matthew Martin).

2008-03-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Make the year and disc entries accessible (#520687, thanks
	Patrick Wade).

2008-03-14  Tim-Philipp Müller  <tim at centricular dot net>

	* src/sj-play.c: (select_track):
	  Don't use gst_element_seek_simple() though, otherwise we'd have
	  to up the GStreamer requirement.

2008-03-14  Tim-Philipp Müller  <tim at centricular dot net>

	* src/sj-play.c: (select_track), (cb_error):
	  Fix error handling: when the state change fails immediately
	  (e.g. because the audio device can't be opened), return FALSE
	  to the caller, so that the caller doesn't try to go into
	  playing state a second time, which would result in two error