@@ -2,7 +2,7 @@
 Encoding=UTF-8
 _Name=Audio CD Extractor
 _Comment=Copy music from your CDs
-Exec=sound-juicer
+Exec=sound-juicer %u
 Icon=sound-juicer
 StartupNotify=true
 MimeType=x-content/audio-cdda;
