@@ -1,5 +1,15 @@
 2008-05-14  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.desktop.in.in:
+	Specify that URLs can be passed when starting SJ
+	
+	* src/sj-main.c:
+	Munge any passed URLs into device paths.
+
+	#530423, thanks Bastien "Big Baz" Nocera.
+
+2008-05-14  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	* src/sj-main.c:
 	Fix display problems with the notification by putting it inside an
